refactor: fix SonarQube code quality issues across multiple modules
- Extract duplicate string literals into constants (S1192: IMAGE_JPEG)
- Convert constant-returning methods to static final fields (S3400)
- Reduce cognitive complexity via Stream-based validation helpers (S3776)
- Extract nested try blocks into separate methods (S1141)
- Use Math.clamp() instead of Math.max/min chains (S6885)
- Uppercase EventStatus enum values with displayName for JSON compat
- Apply Java 21 record deconstruction patterns across factories/listeners

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>